# PlateDeformation

./: .gitignore  README.md
Source/: CMakeLists.txt  Convergence.hpp  FiniteDifferenceMethod.hpp  FiniteElementMethod.hpp  cluster.hpp  element.hpp  fdm.cpp  fem.cpp  main.cpp  mesh.hpp  node.hpp  python_libs.cpp  readme.md  setup.hpp
theory/: readme.md
theory/mixed_fem/: readme.md
